--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>color_tagger</title>
+    <title>_SPECTRUM_</title>
 </head>
 <body>
   <div id="root"></div>
