--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <meta name="coverage" content="Worldwide">
     <meta name="distribution" content="Global">
     <title>MODELS FROM THE PAST FOR THE FUTURE</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div id="root"></div>
