__MUTATE__ chang name of site.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="MODELS FROM THE PAST FOR THE FUTURE">
+    <meta name="program studios">
     <meta content="a site for speculative knowledge production that is both reflective and performative in investigating and embracing the (as yet) unknown.">
     <meta name="author" content="Olivier Van D'huynslager">
     <meta name="copyright" content="Olivier Van D'huynslager">
