--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <meta name="coverage" content="Worldwide">
     <meta name="distribution" content="Global">
     <title>MODELS FROM THE PAST FOR THE FUTURE</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
