--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <div id="root"></div>
+    <div id="root"></div>
+    <script type="module" src="src/index.jsx"></script>
 </body>
 </html>
