__GROW__ add Helmet to pages to provide meta information for web crawling. #163

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="program studios">
-    <meta content="a site for speculative knowledge production that is both reflective and performative in investigating and embracing the (as yet) unknown.">
     <meta name="author" content="Olivier Van D'huynslager">
     <meta name="copyright" content="Olivier Van D'huynslager">
     <meta name="owner" content="Olivier Van D'huynslager">
@@ -14,7 +13,7 @@
     <meta name="category" content="Design">
     <meta name="coverage" content="Worldwide">
     <meta name="distribution" content="Global">
-    <title>MODELS FROM THE PAST FOR THE FUTURE</title>
+    <title>Program Studios - Design Museum Gent</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
